--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,6 @@
     "allowJs": true,
     "declaration": true
   },
-  "include": ["src/*", "bin.ts", "test/svgtosvelte.spec.ts"]
+  "include": ["src/*", "bin.ts", "test/**/*.svelte"],
+  "exclude": ["node_modules"]
 }
