--- a/package.json
+++ b/package.json
@@ -57,5 +57,6 @@
     "estree-walker": "^3.0.3",
     "svelte": "^5.16.1",
     "svelte-check": "^4.1.4"
-  }
+  },
+  "packageManager": "pnpm@10.2.0"
 }
