--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -12,6 +12,7 @@ jobs:
     permissions:
       contents: write # to create release (changesets/action)
       pull-requests: write # to create pull request (changesets/action)
+      id-token: write # OpenID Connect token needed for provenance
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
